--- a/yueshipin/res/layout/tab1.xml
+++ b/yueshipin/res/layout/tab1.xml
@@ -53,11 +53,14 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <ImageView
+            <TextView
                 android:id="@+id/imageView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/top_logo_1"/>
+                android:text="悦    单"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:textSize="25sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -66,14 +69,13 @@
             android:layout_weight="0.37"
             android:gravity="center"
             android:orientation="horizontal"
-             android:onClick="OnClickDownloadTopRight">
+             android:onClick="OnClickSaoMiaoTopRight">
             
             <ImageView 
                 android:id="@+id/DownloadPage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:background="@drawable/tab_rignt_download"
+                android:background="@drawable/saoyisao"
                 android:layout_centerVertical="true"
                />
         </LinearLayout>
@@ -85,7 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/LayoutTitle"
         android:orientation="vertical">
-
+        
         <ListView
             android:id="@+id/listView1"
             android:layout_width="wrap_content"
