--- a/yueshipin/res/layout/tab3.xml
+++ b/yueshipin/res/layout/tab3.xml
@@ -36,11 +36,14 @@
             android:gravity="center"
             android:orientation="horizontal" >
 
-            <ImageView
-                android:id="@+id/imageView2"
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/top_logo_1" />
+                android:gravity="center"
+                android:textSize="25sp"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                android:text="我    的"/>
         </LinearLayout>
 
         <LinearLayout
