--- a/yueshipin/res/layout/video_cache_detail.xml
+++ b/yueshipin/res/layout/video_cache_detail.xml
@@ -42,7 +42,8 @@
                 android:layout_gravity="center"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="视频缓存"
+                android:text="视频下载"
+                android:textStyle="bold"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
         </LinearLayout>
 
