--- a/yueshipin/res/layout/tab1.xml
+++ b/yueshipin/res/layout/tab1.xml
@@ -87,7 +87,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/LayoutTitle"
         android:orientation="vertical">
-        
+        <ImageButton
+            android:id="@+id/Binding_Click" 
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:background="@drawable/android_saoyisao_shouye"
+            android:visibility="gone"/>
         <ListView
             android:id="@+id/listView1"
             android:layout_width="wrap_content"
