--- a/yueshipin/res/layout/before_binding.xml
+++ b/yueshipin/res/layout/before_binding.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@android:color/white" >
-    <LinearLayout
+    android:background="@android:color/white"
+    android:orientation="vertical" >
+
+    <LinearLayout
         android:id="@+id/LayoutTitle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -57,27 +58,33 @@
         android:layout_height="fill_parent"
         android:gravity="center"
         android:orientation="vertical" >
-        <ImageView android:layout_height="wrap_content"
+
+        <ImageView
             android:layout_width="wrap_content"
-            android:background="@drawable/android_saoyisao_shouye_icon_big"/>
-        <TextView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:background="@drawable/android_saoyisao_shouye_icon_big" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:gravity="center"
-            android:layout_marginTop="10dp"
-            android:text="即将在电视端上绑定悦视频  \n 请确认是否本人操作"/>
-        <ImageButton 
+            android:text="即将在电视端上绑定悦视频  \n 请确认是否本人操作"
+            android:textSize="20sp" />
+
+        <ImageButton
             android:id="@+id/confirm_binding"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="@drawable/confirm_binding"/>
-        <ImageButton 
+            android:background="@drawable/confirm_binding" />
+
+        <ImageButton
             android:id="@+id/cancel_binding"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="@drawable/cancel_binding"/>
+            android:background="@drawable/cancel_binding" />
     </LinearLayout>
 
 </LinearLayout>
