--- a/yueshipin/res/layout/tab2.xml
+++ b/yueshipin/res/layout/tab2.xml
@@ -43,11 +43,14 @@
             android:gravity="center"
             android:orientation="horizontal" >
 
-            <ImageView
+            <TextView
                 android:id="@+id/imageView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/tab2_top_logo" />
+                android:text="悦    榜"
+                android:textStyle="bold"
+                android:textColor="#EAE7E0"
+                android:textSize="23sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -69,7 +72,13 @@
                 />
         </LinearLayout>
     </LinearLayout>
-
+<ImageButton
+            android:id="@+id/Binding_Click" 
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:background="@drawable/android_saoyisao_shouye"
+            android:visibility="gone"/>
    <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="fill_parent"
