--- a/yueshipin/res/layout/reviews.xml
+++ b/yueshipin/res/layout/reviews.xml
@@ -37,7 +37,9 @@
         <TextView
             android:id="@+id/content"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent" />
+            android:layout_height="fill_parent"
+            android:textColor="#1F1F1F" />
+        
     </ScrollView>
 	
 </RelativeLayout>
