--- a/yueshipin/res/layout/tab2.xml
+++ b/yueshipin/res/layout/tab2.xml
@@ -23,8 +23,8 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="0.37"
-            android:gravity="center" 
-             android:onClick="OnClickTab1TopLeft" >
+            android:gravity="center"
+            android:onClick="OnClickTab1TopLeft" >
 
             <ImageView
                 android:id="@+id/Tab1TopLeftImage"
@@ -32,8 +32,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="5dp"
-                android:background="@drawable/tab1_l"
-               />
+                android:background="@drawable/tab1_l" />
         </LinearLayout>
 
         <LinearLayout
@@ -48,9 +47,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="悦    榜"
-                android:textStyle="bold"
                 android:textColor="#EAE7E0"
-                android:textSize="23sp"/>
+                android:textSize="23sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
@@ -58,8 +57,8 @@
             android:layout_height="fill_parent"
             android:layout_weight="0.37"
             android:gravity="center"
-            android:orientation="horizontal" 
-             android:onClick="OnClickSaoMiaoTopRight">
+            android:onClick="OnClickSaoMiaoTopRight"
+            android:orientation="horizontal" >
 
             <ImageView
                 android:id="@+id/Tab1TopRightImage"
@@ -68,18 +67,21 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="5dp"
-                android:background="@drawable/saoyisao"
-                />
+                android:background="@drawable/saoyisao" />
         </LinearLayout>
     </LinearLayout>
-<ImageButton
-            android:id="@+id/Binding_Click" 
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:background="@drawable/android_saoyisao_shouye"
-            android:visibility="gone"/>
-   <LinearLayout
+
+    <ImageButton
+        android:id="@+id/Binding_Click"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/android_saoyisao_shouye"
+        android:clickable="true"
+        android:adjustViewBounds="true"
+        android:padding="0dip"
+        android:visibility="gone" />
+
+    <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -177,11 +179,12 @@
                 android:textColor="@color/grey"
                 android:textSize="15.0sp" />
         </LinearLayout>
-         <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/tab2_10_s_icon"
-                android:visibility="invisible" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/tab2_10_s_icon"
+            android:visibility="invisible" />
     </LinearLayout>
 
     <ImageView
@@ -199,4 +202,5 @@
         android:layout_weight="1.0"
         android:flipInterval="30"
         android:persistentDrawingCache="animation" />
+
 </LinearLayout>
