--- a/yueshipin/res/layout/detail_movie.xml
+++ b/yueshipin/res/layout/detail_movie.xml
@@ -432,7 +432,7 @@
                         android:paddingLeft="5dp"
                         android:singleLine="true"
                         android:text="1234"
-                        android:textColor="@color/black"
+                        android:textColor="#4f4f4f"
                         android:textSize="15sp" />
 
                     <TextView
@@ -442,6 +442,7 @@
                         android:maxLines="5"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
+                        
                         android:text="1234" />
 
                     <TextView
@@ -474,7 +475,7 @@
                         android:paddingLeft="5dp"
                         android:singleLine="true"
                         android:text="1234"
-                        android:textColor="@color/black"
+                        android:textColor="#4f4f4f"
                         android:textSize="15sp" />
 
                     <TextView
@@ -484,6 +485,7 @@
                         android:maxLines="5"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
+                     
                         android:text="1234" />
 
                     <TextView
@@ -516,7 +518,7 @@
                         android:paddingLeft="5dp"
                         android:singleLine="true"
                         android:text="1234"
-                        android:textColor="@color/black"
+                        android:textColor="#4f4f4f"
                         android:textSize="15sp" />
 
                     <TextView
@@ -526,6 +528,7 @@
                         android:maxLines="5"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
+                        
                         android:text="1234" />
 
                     <TextView
