--- a/yueshipin/res/layout/detail_show.xml
+++ b/yueshipin/res/layout/detail_show.xml
@@ -459,7 +459,7 @@
                         android:paddingLeft="5dp"
                         android:singleLine="true"
                         android:text="1234"
-                        android:textColor="@color/black"
+                        android:textColor="#4f4f4f"
                         android:textSize="15sp" />
 
                     <TextView
@@ -469,6 +469,7 @@
                         android:maxLines="5"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
+                        
                         android:text="1234" />
 
                     <TextView
@@ -501,7 +502,7 @@
                         android:paddingLeft="5dp"
                         android:singleLine="true"
                         android:text="1234"
-                        android:textColor="@color/black"
+                        android:textColor="#4f4f4f"
                         android:textSize="15sp" />
 
                     <TextView
@@ -511,6 +512,7 @@
                         android:maxLines="5"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
+                       
                         android:text="1234" />
 
                     <TextView
@@ -543,7 +545,7 @@
                         android:paddingLeft="5dp"
                         android:singleLine="true"
                         android:text="1234"
-                        android:textColor="@color/black"
+                        android:textColor="#4f4f4f"
                         android:textSize="15sp" />
 
                     <TextView
@@ -553,6 +555,7 @@
                         android:maxLines="5"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
+                        
                         android:text="1234" />
 
                     <TextView
