--- a/yueshipin/res/layout/gallery_item.xml
+++ b/yueshipin/res/layout/gallery_item.xml
@@ -7,8 +7,8 @@
      <ImageView 
         android:id="@+id/image"
          android:layout_gravity="center_horizontal"
-         android:layout_width="40dp"
-         android:layout_height="40dp"/>
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"/>
      <TextView 
         android:id="@+id/text"
          android:layout_width="wrap_content"
