--- a/yueshipin/res/layout/gallery_item.xml
+++ b/yueshipin/res/layout/gallery_item.xml
@@ -3,10 +3,12 @@
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical"
+     android:background="@color/transparent"
      android:paddingTop="10dp">
      <ImageView 
         android:id="@+id/image"
          android:layout_gravity="center_horizontal"
+         android:background="@color/transparent"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
      <TextView 
@@ -14,6 +16,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
+         android:background="@color/transparent"
          android:textSize="12sp"
          android:gravity="center"
          android:textColor="@android:color/black"/>
