--- a/yueshipin/res/layout/detail_movie.xml
+++ b/yueshipin/res/layout/detail_movie.xml
@@ -295,13 +295,11 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <Gallery
+            <com.joyplus.widget.MyGallery
                 android:id="@+id/gallery"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:spacing="40dp"
-                android:background="@drawable/source_bg"
-                android:unselectedAlpha="0.4" />
+                android:background="#babababa"/>
 
             <LinearLayout
                 android:id="@+id/LinearLayoutJianjie"
