--- a/yueshipin/res/layout/gallery_item.xml
+++ b/yueshipin/res/layout/gallery_item.xml
@@ -4,11 +4,11 @@
      android:layout_height="fill_parent"
      android:orientation="vertical"
      android:background="@color/transparent"
-     android:paddingTop="10dp">
+     android:padding="10dp">
      <ImageView 
         android:id="@+id/image"
          android:layout_gravity="center_horizontal"
-         android:background="@color/transparent"
+         android:background="@android:color/transparent"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
      <TextView 
@@ -16,7 +16,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
-         android:background="@color/transparent"
+         android:background="@android:color/transparent"
          android:textSize="12sp"
          android:gravity="center"
          android:textColor="@android:color/black"/>
