--- a/yueshipin/res/layout/gallery_item.xml
+++ b/yueshipin/res/layout/gallery_item.xml
@@ -1,24 +1,41 @@
-<LinearLayout
-     xmlns:android="http://schemas.android.com/apk/res/android"
-     android:layout_width="fill_parent"
-     android:layout_height="fill_parent"
-     android:orientation="vertical"
-     android:background="@color/transparent"
-     android:padding="10dp">
-     <ImageView 
-        android:id="@+id/image"
-         android:layout_gravity="center_horizontal"
-         android:background="@android:color/transparent"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"/>
-     <TextView 
-        android:id="@+id/text"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_gravity="center_horizontal"
-         android:background="@android:color/transparent"
-         android:textSize="12sp"
-         android:gravity="center"
-         android:textColor="@android:color/black"/>
- </LinearLayout>
- 
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/transparent"
+    android:orientation="horizontal"
+    >
+
+    <LinearLayout
+        android:layout_width="15dp"
+        android:layout_height="fill_parent" />
+
+    <LinearLayout
+        android:id="@+id/galllery_item"
+        android:paddingTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@android:color/transparent" />
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@android:color/transparent"
+            android:gravity="center"
+            android:textColor="@android:color/black"
+            android:textSize="12sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="15dp"
+        android:layout_height="fill_parent" />
+
+</LinearLayout>
