--- a/yueshipin/res/layout/detail_show.xml
+++ b/yueshipin/res/layout/detail_show.xml
@@ -287,7 +287,7 @@
                 android:id="@+id/gallery"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="#BABABABA"/>
+                android:background="@drawable/yuan_bg"/>
             
             <LinearLayout
                 android:id="@+id/LinearLayoutXGYD"
