--- a/yueshipin/res/layout/detail_tv.xml
+++ b/yueshipin/res/layout/detail_tv.xml
@@ -299,7 +299,7 @@
                 android:id="@+id/gallery"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="#BABABABA"/>
+                android:background="@drawable/yuan_bg"/>
             
             <LinearLayout
                 android:layout_width="match_parent"
