--- a/yueshipin/res/layout/gallery_item.xml
+++ b/yueshipin/res/layout/gallery_item.xml
@@ -6,16 +6,18 @@
     >
 
     <LinearLayout
-        android:layout_width="15dp"
+        android:layout_width="20dp"
         android:layout_height="fill_parent" />
 
     <LinearLayout
         android:id="@+id/galllery_item"
-        android:paddingTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:orientation="vertical" >
-
+        android:orientation="vertical"
+        android:background="@drawable/logo_bg_s" >
+		<TextView 
+		    android:layout_width="wrap_content"
+		    android:layout_height="10dp"/>
         <ImageView
             android:id="@+id/image"
             android:layout_width="wrap_content"
@@ -35,7 +37,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="15dp"
+        android:layout_width="20dp"
         android:layout_height="fill_parent" />
 
 </LinearLayout>
