--- a/yueshipin/res/layout/detail_bangdan.xml
+++ b/yueshipin/res/layout/detail_bangdan.xml
@@ -21,9 +21,10 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:layout_weight="0.37"
+            android:layout_weight="1"
             android:gravity="center"
-            android:onClick="OnClickTab1TopLeft" >
+            android:onClick="OnClickTab1TopLeft"
+            android:paddingLeft="16dp" >
 
             <ImageView
                 android:id="@+id/imageView1"
@@ -35,7 +36,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:layout_weight="1.81"
+            android:layout_weight="3"
             android:gravity="center"
             android:orientation="horizontal" >
 
@@ -55,7 +56,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:layout_weight="0.37"
+            android:layout_weight="1"
             android:gravity="center"
             android:orientation="horizontal" >
         </LinearLayout>
