--- a/yueshipin/res/layout/mediacontroller.xml
+++ b/yueshipin/res/layout/mediacontroller.xml
@@ -18,7 +18,10 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="热血高校热血高校热血高校"
-            android:ellipsize="end"
+            android:ellipsize="marquee"
+            android:focusable="true" 
+        	android:marqueeRepeatLimit="marquee_forever" 
+        	android:focusableInTouchMode="true"
             android:textSize="20sp"
             android:singleLine="true"
             android:maxEms = "6"
