--- a/yueshipin/res/drawable/wx_share_p2.xml
+++ b/yueshipin/res/drawable/wx_share_p2.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/top_soucang_s" android:state_checked="true"/>
-    <item android:drawable="@drawable/top_soucang" android:state_checked="false"/>
-
+    <item android:drawable="@drawable/top_shoucang_s" android:state_checked="true"/>
+    <item android:drawable="@drawable/top_shoucang" android:state_checked="false"/>
+    
 </selector>
