--- a/yueshipin/res/drawable/weixinshare.xml
+++ b/yueshipin/res/drawable/weixinshare.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/icon_fenxiang_s" android:state_checked="true"/>
-    <item android:drawable="@drawable/icon_fenxiang" android:state_checked="false"/>
+    <item android:drawable="@drawable/fenxiang_icon_s" android:state_checked="true"/>
+    <item android:drawable="@drawable/fenxiang_icon" android:state_checked="false"/>
 
 </selector>
